[gd_scene load_steps=38 format=3 uid="uid://bkdgj6k847y2k"]

[ext_resource type="Script" path="res://game/player/scripts/player.gd" id="1_1ar55"]
[ext_resource type="Resource" uid="uid://cfh5dhpgj5p4o" path="res://game/player/resources/DefaultMovementConfig.tres" id="2_grolk"]
[ext_resource type="Resource" uid="uid://dmbsa7osmtlj1" path="res://game/player/resources/DefaultEnergy.tres" id="3_p6mhg"]
[ext_resource type="Script" path="res://game/player/scripts/player_skin.gd" id="4_fm0vf"]
[ext_resource type="PackedScene" uid="uid://55web4m4dwee" path="res://game/player/scenes/Ghost.tscn" id="5_nwdyy"]
[ext_resource type="Texture2D" uid="uid://cuksxd4r4hepx" path="res://sprites/Mage_SpriteSheet.png" id="6_ujroe"]
[ext_resource type="PackedScene" uid="uid://d27j0tghj30yf" path="res://vfx/SmallFlame.tscn" id="7_l8k3n"]
[ext_resource type="PackedScene" uid="uid://chea3blsxpci" path="res://game/player/scenes/HeadRay.tscn" id="8_7rxe2"]
[ext_resource type="Script" path="res://game/player/scripts/wall_ray.gd" id="9_1j66q"]
[ext_resource type="Script" path="res://game/player/scripts/input_processor.gd" id="10_efjy7"]
[ext_resource type="Script" path="res://game/player/scripts/player_state.gd" id="11_hq55b"]
[ext_resource type="Script" path="res://game/player/scripts/state_machine/state_machine.gd" id="12_8ie5b"]
[ext_resource type="Script" path="res://game/player/scripts/state_machine/transitions/trans_any_dead.gd" id="13_bjfph"]
[ext_resource type="Script" path="res://game/player/scripts/state_machine/transitions/trans_death_idle.gd" id="14_ng2d8"]
[ext_resource type="Script" path="res://game/player/scripts/state_machine/transitions/trans_fall_idle.gd" id="15_u88gy"]
[ext_resource type="Script" path="res://game/player/scripts/state_machine/transitions/trans_fall_jump.gd" id="16_r6uor"]
[ext_resource type="Script" path="res://game/player/scripts/state_machine/transitions/trans_fall_move.gd" id="17_po42n"]
[ext_resource type="Script" path="res://game/player/scripts/state_machine/transitions/trans_idle_move.gd" id="18_2wes0"]
[ext_resource type="Script" path="res://game/player/scripts/state_machine/transitions/trans_move_fall.gd" id="19_ehp8b"]
[ext_resource type="Script" path="res://game/player/scripts/state_machine/transitions/trans_jump_fall.gd" id="20_edfcw"]
[ext_resource type="Script" path="res://game/player/scripts/state_machine/transitions/trans_move_idle.gd" id="21_jpjiw"]
[ext_resource type="Script" path="res://game/player/scripts/state_machine/transitions/trans_move_jump.gd" id="22_nyhnq"]
[ext_resource type="Script" path="res://game/player/scripts/state_machine/states/state_fall.gd" id="23_s6rfg"]
[ext_resource type="Script" path="res://game/player/scripts/state_machine/states/state_idle.gd" id="24_8h2fc"]
[ext_resource type="Script" path="res://game/player/scripts/state_machine/states/state_any.gd" id="25_l2cmj"]
[ext_resource type="Script" path="res://game/player/scripts/state_machine/states/state_jump.gd" id="26_fdcwu"]
[ext_resource type="Script" path="res://game/player/scripts/state_machine/states/state_move.gd" id="27_4bmwi"]
[ext_resource type="Script" path="res://game/player/scripts/state_machine/states/state_death.gd" id="28_fyt7c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yk82u"]
size = Vector2(6, 16)

[sub_resource type="AnimationRootNode" id="AnimationRootNode_hjpu5"]

[sub_resource type="Animation" id="Animation_qxhpb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSkin/SkinSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qp0pt"]
resource_name = "fall"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSkin/SkinSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}

[sub_resource type="Animation" id="Animation_ryxfe"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSkin/SkinSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_btnfh"]
resource_name = "jump"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSkin/SkinSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_xjeyl"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSkin/SkinSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_bqcee"]
resource_name = "start_jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSkin/SkinSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xi8kc"]
_data = {
"RESET": SubResource("Animation_qxhpb"),
"fall": SubResource("Animation_qp0pt"),
"idle": SubResource("Animation_ryxfe"),
"jump": SubResource("Animation_btnfh"),
"run": SubResource("Animation_xjeyl"),
"start_jump": SubResource("Animation_bqcee")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_1ar55")
player_movement_config = ExtResource("2_grolk")
initial_energy = ExtResource("3_p6mhg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_yk82u")
debug_color = Color(0.794939, 0.0659271, 1, 0.42)

[node name="PlayerSkin" type="Node2D" parent="." node_paths=PackedStringArray("player")]
unique_name_in_owner = true
script = ExtResource("4_fm0vf")
player = NodePath("..")
ghost_scene = ExtResource("5_nwdyy")

[node name="SkinSprite" type="Sprite2D" parent="PlayerSkin"]
light_mask = 2
visibility_layer = 2
position = Vector2(0, -9)
texture = ExtResource("6_ujroe")
hframes = 4
vframes = 5

[node name="AnimationTree" type="AnimationTree" parent="PlayerSkin"]
root_node = NodePath("../..")
tree_root = SubResource("AnimationRootNode_hjpu5")

[node name="SkinAnimationPlayer" type="AnimationPlayer" parent="PlayerSkin"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_xi8kc")
}
autoplay = "idle"

[node name="Node2D" type="Node2D" parent="PlayerSkin"]
position = Vector2(4, -6)

[node name="Flame" parent="PlayerSkin/Node2D" instance=ExtResource("7_l8k3n")]
position = Vector2(-16, -6)
interpolate = false
fract_delta = false
local_coords = true

[node name="Raycasts" type="Node2D" parent="."]

[node name="HeadRayLeft" parent="Raycasts" instance=ExtResource("8_7rxe2")]
position = Vector2(-3, -15)

[node name="HeadRayRight" parent="Raycasts" instance=ExtResource("8_7rxe2")]
position = Vector2(3, -15)
ray_offset = -1

[node name="WallRaycast" type="Node2D" parent="Raycasts"]
script = ExtResource("9_1j66q")

[node name="RayCastRight" type="RayCast2D" parent="Raycasts/WallRaycast"]
position = Vector2(4, -6)
target_position = Vector2(1, 0)

[node name="RayCastLeft" type="RayCast2D" parent="Raycasts/WallRaycast"]
position = Vector2(-3, -6)
target_position = Vector2(-2, 0)

[node name="Managers" type="Node" parent="."]

[node name="InputProcessor" type="Node" parent="Managers"]
unique_name_in_owner = true
script = ExtResource("10_efjy7")

[node name="PlayerState" type="Node" parent="Managers" node_paths=PackedStringArray("player")]
unique_name_in_owner = true
script = ExtResource("11_hq55b")
player = NodePath("../..")

[node name="StateMachine" type="Node" parent="Managers" node_paths=PackedStringArray("any_state", "player")]
script = ExtResource("12_8ie5b")
initial_state = NodePath("States/StateIdle")
any_state = NodePath("States/StateAny")
player = NodePath("../..")

[node name="Transitions" type="Node" parent="Managers/StateMachine"]

[node name="TransAnyDead" type="Node" parent="Managers/StateMachine/Transitions" node_paths=PackedStringArray("start_state", "target_state")]
script = ExtResource("13_bjfph")
start_state = NodePath("../../States/StateAny")
target_state = NodePath("../../States/StateDeath")

[node name="TransDeathIdle" type="Node" parent="Managers/StateMachine/Transitions" node_paths=PackedStringArray("start_state", "target_state")]
script = ExtResource("14_ng2d8")
start_state = NodePath("../../States/StateDeath")
target_state = NodePath("../../States/StateIdle")

[node name="TransFallIdle" type="Node" parent="Managers/StateMachine/Transitions" node_paths=PackedStringArray("start_state", "target_state")]
script = ExtResource("15_u88gy")
start_state = NodePath("../../States/StateFall")
target_state = NodePath("../../States/StateIdle")

[node name="TransFallJump" type="Node" parent="Managers/StateMachine/Transitions" node_paths=PackedStringArray("start_state", "target_state")]
script = ExtResource("16_r6uor")
start_state = NodePath("../../States/StateFall")
target_state = NodePath("../../States/StateJump")

[node name="TransFallMove" type="Node" parent="Managers/StateMachine/Transitions" node_paths=PackedStringArray("start_state", "target_state")]
script = ExtResource("17_po42n")
start_state = NodePath("../../States/StateFall")
target_state = NodePath("../../States/StateMove")

[node name="TransIdleMove" type="Node" parent="Managers/StateMachine/Transitions" node_paths=PackedStringArray("start_state", "target_state")]
script = ExtResource("18_2wes0")
start_state = NodePath("../../States/StateIdle")
target_state = NodePath("../../States/StateMove")

[node name="TransIdleFall" type="Node" parent="Managers/StateMachine/Transitions" node_paths=PackedStringArray("start_state", "target_state")]
script = ExtResource("19_ehp8b")
start_state = NodePath("../../States/StateIdle")
target_state = NodePath("../../States/StateFall")

[node name="TransJumpFall" type="Node" parent="Managers/StateMachine/Transitions" node_paths=PackedStringArray("start_state", "target_state")]
script = ExtResource("20_edfcw")
start_state = NodePath("../../States/StateJump")
target_state = NodePath("../../States/StateFall")

[node name="TransMoveFall" type="Node" parent="Managers/StateMachine/Transitions" node_paths=PackedStringArray("start_state", "target_state")]
script = ExtResource("19_ehp8b")
start_state = NodePath("../../States/StateMove")
target_state = NodePath("../../States/StateFall")

[node name="TransMoveIdle" type="Node" parent="Managers/StateMachine/Transitions" node_paths=PackedStringArray("start_state", "target_state")]
script = ExtResource("21_jpjiw")
start_state = NodePath("../../States/StateMove")
target_state = NodePath("../../States/StateIdle")

[node name="TransMoveJump" type="Node" parent="Managers/StateMachine/Transitions" node_paths=PackedStringArray("start_state", "target_state")]
script = ExtResource("22_nyhnq")
start_state = NodePath("../../States/StateMove")
target_state = NodePath("../../States/StateJump")

[node name="TransIdleJump" type="Node" parent="Managers/StateMachine/Transitions" node_paths=PackedStringArray("start_state", "target_state")]
script = ExtResource("22_nyhnq")
start_state = NodePath("../../States/StateIdle")
target_state = NodePath("../../States/StateJump")

[node name="States" type="Node" parent="Managers/StateMachine"]

[node name="StateFall" type="Node" parent="Managers/StateMachine/States"]
script = ExtResource("23_s6rfg")

[node name="StateIdle" type="Node" parent="Managers/StateMachine/States"]
script = ExtResource("24_8h2fc")

[node name="StateAny" type="Node" parent="Managers/StateMachine/States"]
script = ExtResource("25_l2cmj")

[node name="StateJump" type="Node" parent="Managers/StateMachine/States" node_paths=PackedStringArray("jump_head_cast_left", "jump_head_cast_right")]
script = ExtResource("26_fdcwu")
jump_head_cast_left = NodePath("../../../../Raycasts/HeadRayLeft")
jump_head_cast_right = NodePath("../../../../Raycasts/HeadRayRight")

[node name="StateMove" type="Node" parent="Managers/StateMachine/States" node_paths=PackedStringArray("wallRaycast")]
script = ExtResource("27_4bmwi")
wallRaycast = NodePath("../../../../Raycasts/WallRaycast")

[node name="StateDeath" type="Node" parent="Managers/StateMachine/States"]
script = ExtResource("28_fyt7c")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -8)
limit_left = 0
limit_top = 0
limit_right = 320
limit_bottom = 180
position_smoothing_speed = 8.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
